--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h3><em>Do I have to provide my own charcoal or propane tank?</em></h3>
 <p1>Nope! Each grill rental includes either a full propane tank or a bag of charcoal depending on the grill you choose.</p1>
 <h3><em>What do I do if I can't light the grill?</em></h3>
-<p1>Each gril had a comprehensive user guide. If you still can't get the grill going then you can call our 24 hour customer service line (800-76GRILL) to get help from one of our certified grill experts</p1>
+<p1>Each grill has a comprehensive user guide. If you still can't get the grill going then you can call our 24 hour customer service line (800-76GRILL) to get help from one of our certified grill experts</p1>
 <h3><em>I live in an apartment and don't have access to a patio or outside area, can I use the grill indoors?</em></h3>
 <p1>No.</p1>
 
