--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <h1><strong><u>GrillBer!</u></strong></h1>
 
-<p1>GrillBer is exactly like it sounds: Uber for grills! Let me set the scene. You live in a dense urban environment, in a studio apartment on the 20th floor of an apartment building, but you want to put on a cookout! You don't have the space or the budget to buy a high quality grill, but your local park doesn't provide public access grills for your cookout. What do you do? That's where GrillBer comes in! GrillBer is a rental and delivery service for grills! Grill renters can put up the specs and descriptions for their grills, and users can rent them for specific amounts of time! The grill owner will drop off the grill at the designated time and location, and then pick it back up when the user is finished! Just think of the possibilities!</p1>
-
+<p>GrillBer is exactly like it sounds: Uber for grills! Let me set the scene. You live in a dense urban environment, in a studio apartment on the 20th floor of an apartment building, but you want to put on a cookout! You don't have the space or the budget to buy a high quality grill, but your local park doesn't provide public access grills for your cookout. What do you do? That's where GrillBer comes in! GrillBer is a rental and delivery service for grills! Grill renters can put up the specs and descriptions for their grills, and users can rent them for specific amounts of time! The grill owner will drop off the grill at the designated time and location, and then pick it back up when the user is finished! Just think of the possibilities!</p>
+<hr>
 <table>
     <thead>
-        <tr style="font-weight:bold">
-            <td>Brand and Model</td>
-            <td>Username</td>
-            <td>City</td>
-            <td>Cost/hour</td>
-            <td>Delivery Cost</strong></td>
-            <td>Grill Rating (1-5)</td>
-        </tr style="font-weight:bold">
+        <tr><strong>
+            <td>|Brand and Model</td>
+            <td>|Username</td>
+            <td>|City</td>
+            <td>|Cost/hour</td>
+            <td>|Delivery Cost</strong></td>
+            <td>|Grill Rating (1-5)|</td>
+        </strong></tr>
     </thead>
     <tbody>
         <tr>
@@ -56,17 +56,29 @@
         </tr>
     </tbody>
 </table>
-
+<hr>
 <h2><u>FAQ </u></h2>
 <h3><em>Do I have to provide my own charcoal or propane tank?</em></h3>
-<p1>Nope! Each grill rental includes either a full propane tank or a bag of charcoal depending on the grill you choose.</p1>
+<p>Nope! Each grill rental includes either a full propane tank or a bag of charcoal depending on the grill you choose.</p>
 <h3><em>What do I do if I can't light the grill?</em></h3>
-<p1>Each grill has a comprehensive user guide. If you still can't get the grill going then you can call our 24 hour customer service line (800-76GRILL) to get help from one of our certified grill experts</p1>
+<p>Each grill has a comprehensive user guide. If you still can't get the grill going then you can call our 24 hour customer service line (800-76GRILL) to get help from one of our certified grill experts</p>
 <h3><em>I live in an apartment and don't have access to a patio or outside area, can I use the grill indoors?</em></h3>
-<p1>No.</p1>
-
+<p>No.</p>
+<hr>
 <h2><u>How To Rent A Grill Today?</u></h2>
-<p1>call us at 800-76GRILL to reserve your grill today!</p1>
+<p>call us at 800-76GRILL to reserve your grill today!</p>
 
 <h2><u>WHY?</u></h2>
-<p1>Because everyone loves a cookout!</p1>
+<p>Because everyone loves a cookout!</p>
+<hr>
+<h2>Interested in GrillBer? Complete the form below for more info!</h2>
+<form>
+    Name:<br><input type="text" name="name">
+    <br>
+    email:<br><input type="text" name="email">
+    <br>
+    Phone Number:<br><input type="number" name="PhoneNumber">
+    <br>
+    On a Scale From 1-10, how likely are you to reccomend GrillBer to a Friend?:<br><input type="number" name="reccomendationRating">
+    <br>
+</form>
