added bolded headers again

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <hr>
 <table>
     <thead>
-        <tr><strong>
-            <td>|Brand and Model</td>
-            <td>|Username</td>
-            <td>|City</td>
-            <td>|Cost/hour</td>
-            <td>|Delivery Cost</strong></td>
-            <td>|Grill Rating (1-5)|</td>
-        </strong></tr>
+        <tr style="font-weight: bold">
+            <td>Brand and Model</td>
+            <td>Username</td>
+            <td>City</td>
+            <td>Cost/hour</td>
+            <td>Delivery Cost</strong></td>
+            <td>Grill Rating (1-5)</td>
+        </tr style="font-weight: bold">
     </thead>
     <tbody>
         <tr>
